2006-12-12  J. Tang  <jtang@tresys.com>

	* Merged qpol/policy_query.h into qpol/policy.h.  Split module
	related code into qpol/module.h.

	* Rewrite of seaudit to utilize libseaudit.so.4; tweaked numerous
	interface issues.

	* Rewrite of libseaudit to meet coding standards.  libseaudit.so.4
	is now a shared object file with proper namespacing.

2006-12-11  J. Mowery  <jmowery@tresys.com>

	* Added qpol_policy_has_capability() to qpol/policy_query.h
	This function and the enumeration qpol_capability_e allows
	a user of the library to check if a loaded policy is
	capable of supporting various policy features.

	* Support has been added to libqpol for loading policy modules.
	See qpol/policy.h for details.

2006-12-01  J. Tang  <jtang@tresys.com>

	* deprecated apol_config_get_varlist() and
	apol_config_varlist_to_str(); added apol_file_find_path(),
	apol_config_split_var(), and apol_config_join_var()

2006-12-01  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.0.1.

2006-11-29  J. Tang  <jtang@tresys.com>

	* synced source parser to libsepol 1.15.2.

2006-11-27  J. Tang  <jtang@tresys.com>

	* added application icons to apol, seaudit, and sediffx

2006-11-09  j. Mowery <jmowery@tresys.com>

	* added __cplusplus guards to all external headers

2006-11-08  J. Tang  <jtang@tresys.com>

	* apol_permmap_t is now a hidden declaration.
	apol_permmap_destroy() has been removed.  (It should never have
	been publicly visible.)

	* apol_policy_t is now an opaque structure.  Added accessors such
	as apol_policy_get_qpol() to retrieve some of those fields.  This
	also means that the apol callback function changed, so as to be
	similar to qpol's callback.

2006-11-07  J. Mowery <jmowery@tresys.com>

	* renamed apol_get_*_by_query() to apol_*_get_by_query to match
	  naming conventions of other functions. Old versions were retained and
	  marked as deprecated.

2006-11-02  J. Tang  <jtang@tresys.com>

	* added apol_str_strdup() (declared in apol/util.h)
